--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -3,6 +3,7 @@
 #
 # This file is formatted using TOML syntax - learn more at https://learnxinyminutes.com/docs/toml/
 # Each configuration section is defined by a name in square brackets (e.g. `[outputs]`).
+relativeURLs = true
 
 # Title of your site
 title = "Academia"
