--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -10,8 +10,8 @@ title = "Academia"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-#baseURL = "https://sukiakiumo.github.io/" 
-baseURL = "https://sukiakiumo.github.io/academia-hugo/" 
+baseURL = "https://sukiakiumo.github.io/" 
+#baseURL = "https://sukiakiumo.github.io/academia-hugo/" 
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
