changes that shouldnnot break

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -6,7 +6,7 @@
 relativeURLs = true
 
 # Title of your site
-title = "Academia"
+title = "- i -"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
